[gd_scene load_steps=4 format=3 uid="uid://progression_menu"]

[ext_resource type="Script" path="res://scripts/story_mode/progression_menu.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tab"]
bg_color = Color(0.25, 0.25, 0.3, 1)
corner_radius_left = 15
corner_radius_top = 15
corner_radius_right = 15
corner_radius_bottom = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
corner_radius_left = 12
corner_radius_top = 12
corner_radius_right = 12
corner_radius_bottom = 12
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0

[node name="ProgressionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.12, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 40.0
offset_right = -20.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0.34, 1)
theme_override_font_sizes/font_size = 32
text = "UPGRADES"
horizontal_alignment = 1

[node name="CurrencyBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="EssenceContainer" type="PanelContainer" parent="VBoxContainer/CurrencyBar"]
custom_minimum_size = Vector2(140, 45)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="HBox" type="HBoxContainer" parent="VBoxContainer/CurrencyBar/EssenceContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Icon" type="Label" parent="VBoxContainer/CurrencyBar/EssenceContainer/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "â—†"

[node name="EssenceValue" type="Label" parent="VBoxContainer/CurrencyBar/EssenceContainer/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.27, 0.87, 0.51, 1)
theme_override_font_sizes/font_size = 20
text = "0"

[node name="StardustContainer" type="PanelContainer" parent="VBoxContainer/CurrencyBar"]
custom_minimum_size = Vector2(140, 45)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="HBox" type="HBoxContainer" parent="VBoxContainer/CurrencyBar/StardustContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Icon" type="Label" parent="VBoxContainer/CurrencyBar/StardustContainer/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0.34, 1)
theme_override_font_sizes/font_size = 20
text = "âœ§"

[node name="StardustValue" type="Label" parent="VBoxContainer/CurrencyBar/StardustContainer/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0.34, 1)
theme_override_font_sizes/font_size = 20
text = "0"

[node name="CrystalContainer" type="PanelContainer" parent="VBoxContainer/CurrencyBar"]
custom_minimum_size = Vector2(140, 45)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="HBox" type="HBoxContainer" parent="VBoxContainer/CurrencyBar/CrystalContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Icon" type="Label" parent="VBoxContainer/CurrencyBar/CrystalContainer/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.65, 0.45, 0.95, 1)
theme_override_font_sizes/font_size = 20
text = "ðŸ’Ž"

[node name="CrystalValue" type="Label" parent="VBoxContainer/CurrencyBar/CrystalContainer/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.65, 0.45, 0.95, 1)
theme_override_font_sizes/font_size = 20
text = "0"

[node name="TabBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="UpgradesTab" type="Button" parent="VBoxContainer/TabBar"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_tab")
text = "UPGRADES"

[node name="AbilitiesTab" type="Button" parent="VBoxContainer/TabBar"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_tab")
text = "ABILITIES"

[node name="MasteryTab" type="Button" parent="VBoxContainer/TabBar"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_tab")
text = "MASTERY"

[node name="CategoryBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ContentContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(180, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 22
text = "BACK"
